--- a/src/pages/chatroom/messages/messageComponent/messageStyling.css
+++ b/src/pages/chatroom/messages/messageComponent/messageStyling.css
@@ -3,7 +3,7 @@
     position: absolute;
     width: 150px;
     top: 0;
-    left: -170px;
+    left: 108%;
     padding: 5px;
     border-radius: 5px;
 }
@@ -17,7 +17,7 @@
     transition-duration: 100ms;
 }
 .optionsSVG{
-    margin-right: 10px;
+    margin: 0 10px;
     padding: 5px;
     border-radius: 100%;
 }
@@ -83,12 +83,13 @@
 .reactionOption{
     position: relative;
 }
+
 .emojisContainer{
     background-color: var(--dark-red);
+    /* position: fixed; */
     position: absolute;
     top: 0;
-    right: 100%;
-    width: fit-content;
+    left: 108%;
     border-radius: 5px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -101,5 +102,5 @@
     border-radius: 5px;
     height: fit-content;
     width: fit-content;
-    /* color: rgba(166, 59, 223, 0.488); */
+
 }
